# infinit_restaurant

./: README.md  pyproject.toml  requirements.txt  setup.py
infinit_restaurant/: __init__.py  hooks.py  modules.txt
infinit_restaurant/utils/: __init__.py  isolation.py
